--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "repository": {
         "url": "git@github.com:andymckay/marketplace-constants.git"
     },
-    "main": "constants",
+    "main": "mpconstants",
     "engines": {
         "node": "*"
     }
