update misc stuff, fix up node module

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
         "**/*.py",
         "**/*.txt",
         "**/*.md",
-        "mpconstants"
+        "lib",
+        "mpconstants",
+        "Makefile"
     ]
 }
