--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,11 @@
 {
-    "author": "Andy McKay",
+    "authors": [
+        "Andy McKay",
+        "Mozilla"
+    ],
     "name": "marketplace-constants",
     "description": "Common, universal constants for the Firefox Marketplace",
-    "version": "0.4.0",
+    "version": "0.5.0",
     "ignore": [
         "**/*.py",
         "**/*.txt",
