--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
 - '2.7'
 install: pip install -r requirements.txt
 script: nosetests
+sudo: false
 deploy:
   provider: pypi
   user: marketplacedevsinternal
