--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "author": "Andy McKay",
+    "author": "Mozilla",
     "name": "marketplace-constants",
     "description": "Common, universal constants for the Firefox Marketplace",
-    "version": "0.8.0",
+    "version": "0.9.0",
     "repository": {
-        "url": "git@github.com:andymckay/marketplace-constants.git"
+        "url": "git@github.com:mozilla/marketplace-constants.git"
     },
     "main": "mpconstants",
     "engines": {
