--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ after_deploy:
 deploy:
   provider: pypi
   user: marketplacedevsinternal
+  distributions: "sdist bdist_wheel"
   password:
     secure: fUazEzYiQIC0QKWwum/163F4xbdAPhvH2ql4c/Sd2dAI/1Rml15O0ENNXwdKWEO658pAGeEr+/rkOlMfZNR1Dsfn5uiCFPKCCmqF7umjVCIRF1eXybWw+qK1jBwUNpZwHTqinXpg8/8kLuMgwZAIkykBhqcnuT+Uv08opwcuKBk=
   on:
